--- a/ObjC-IOS/exportOptions.plist
+++ b/ObjC-IOS/exportOptions.plist
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>method</key>
-        <string>ad-hoc</string>
-    </dict>
+<dict>
+	<key>method</key>
+	<string>ad-hoc</string>
+	<key>provisioningProfiles</key>
+	<string>TCS_Distribution_Profile_16To17</string>
+</dict>
 </plist>
